--- a/index.html
+++ b/index.html
@@ -1,34 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vue Start</title>
-
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-</head>
-<body>
-    <div id="app">
-        <h3>{{message}}</h3>
-        <button @click="clickMe">Click Me</button>
-    </div>
-
-    <script>
-        const app = Vue.createApp({
-            data() {
-                return {
-                    message: "Hello there"
-                };
-            },
-            methods: {
-                clickMe() {
-                    console.log("button clicked");
-                    this.message = "Message updated";
-                }
-            }
-        });
-
-        app.mount("#app");
-    </script>
-</body>
+    <title>Vite App</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
